// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ethRewards After rewards earnings should update 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "earned": 200.00000000000003,
  "estimatedPostPayout": 0,
  "payoutTime": "[SANITIZED]",
  "post": "000000000000000000000003",
  "shares": 4.711687595755899,
  "source": "post",
  "spent": 0,
  "stakedTokens": 11.100000000000001,
  "status": "paidout",
  "totalPostShares": 4.711687595755899,
  "type": "coins",
  "updatedAt": "[SANITIZED]",
  "user": "a00000000000000000000000",
}
`;

exports[`ethRewards After rewards pending posts should update 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "community": "crypto",
  "communityId": "c00000000000000000000002",
  "createdAt": "[SANITIZED]",
  "earned": 0,
  "estimatedPostPayout": 300.00000000000006,
  "payoutTime": "[SANITIZED]",
  "post": "000000000000000000000006",
  "shares": 6.663332499583073,
  "source": "post",
  "spent": 0,
  "stakedTokens": 22.200000000000003,
  "status": "pending",
  "totalPostShares": 6.663332499583073,
  "type": "coins",
  "updatedAt": "[SANITIZED]",
  "user": "b00000000000000000000000",
}
`;

exports[`ethRewards After rewards should create notification 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "byUsers": Array [],
  "byUsersHandle": Array [],
  "coin": 200.00000000000003,
  "coinType": "eth",
  "createdAt": "[SANITIZED]",
  "forUser": "a00000000000000000000000",
  "group": Array [],
  "personal": true,
  "post": "000000000000000000000003",
  "read": false,
  "source": "post",
  "text": "You earned 200 coins from upvoting this post",
  "type": "reward",
  "updatedAt": "[SANITIZED]",
}
`;

exports[`ethRewards Rewards should compute correctly 1`] = `
Object {
  "payoutData": Object {
    "crypto": Object {
      "community": "crypto",
      "distributedRewards": 600000000000000100000,
      "payouts": Object {
        "b00000000000000000000000": 600000000000000100000,
        "c00000000000000000000000": 0,
      },
      "postPayouts": Array [
        Object {
          "payout": 300000000000000070000,
          "payoutShare": 0.05,
          "rank": 100,
          "title": "000000000000000000000003",
        },
        Object {
          "payout": 300000000000000070000,
          "payoutShare": 0.05,
          "rank": 100,
          "title": "000000000000000000000005",
        },
        Object {
          "payout": 0,
          "payoutShare": undefined,
          "rank": 0,
          "title": "000000000000000000000007",
        },
      ],
    },
    "relevant": Object {
      "community": "relevant",
      "distributedRewards": 400000000000000100000,
      "payouts": Object {
        "a00000000000000000000000": 200000000000000030000,
        "b00000000000000000000000": 126491106406735200000,
        "c00000000000000000000000": 73508893593264850000,
      },
      "postPayouts": Array [
        Object {
          "payout": 200000000000000030000,
          "payoutShare": 0.05,
          "rank": 66.91,
          "title": "000000000000000000000003",
        },
        Object {
          "payout": 200000000000000030000,
          "payoutShare": 0.05,
          "rank": 100,
          "title": "000000000000000000000004",
        },
      ],
    },
  },
  "totalDistributedRewards": 1.0000000000000003e+21,
}
`;

exports[`ethRewards Votes should be created 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "amount": 1,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "downVotes": 0,
  "investor": "a00000000000000000000000",
  "ownPost": false,
  "paidOut": false,
  "partialRelevance": 0,
  "partialUsers": 0,
  "post": "000000000000000000000003",
  "rankChange": 0,
  "relevance": 0,
  "relevantPoints": 0,
  "shares": 4.711687595755899,
  "stakedTokens": 11.100000000000001,
  "updatedAt": "[SANITIZED]",
  "upvotes": 0,
}
`;
